# wholesale-mcp

./: .gitignore  CLAUDE.md  LICENSE  README.md  analyze_cart.py  browser_engine.py  credentials.example.json  e2e_validator.py  entry_point.py  generate_and_validate.sh  install.bat  install.ps1  install.sh  main.py  pyproject.toml  recipe_generator.sh  recipe_schema.py  recipe_test_harness.py  requirements.txt  server.py  site_executor.py  smithery.yaml
.github/workflows/: build-extension.yml
extension/: build_extension.py  manifest.json
installer/: build-installer.py  post-install.py  wholesale-mcp-setup.iss
recipes/: bpm_geoweb_kr.json  bpm_geoweb_kr_auto.json  esehwa_co_kr.json  esehwa_co_kr_auto.json  ibjp_co_kr.json  ibjp_co_kr_auto.json  wjwp_co_kr.json  wjwp_co_kr_auto.json  wos_kps2013_co_kr.json  wos_nicepharm_com.json  wos_nicepharm_com_auto.json  wos_nicepharm_com_test.json
recipes.example/: example_form_site.json  example_jwt_site.json
recipes_backup_v4/: bpm_geoweb_kr.json
src/wholesale_mcp/: browser_engine.py  db.py  recipe_schema.py  server.py  site_executor.py
wholesale_mcp/: __init__.py  browser_engine.py  db.py  recipe_normalizer.py  server.py  site_executor.py
wholesale_mcp/recipes/: ibjp_co_kr.json  wjwp_co_kr.json  wos_nicepharm_com.json
