[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wholesale-mcp"
version = "1.0.0"
description = "MCP server for wholesale pharmacy site automation - browse, analyze, and order"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "playwright>=1.40.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
]

[project.scripts]
wholesale-mcp = "server:mcp.run"
