[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wholesale-mcp"
version = "1.5.3"
description = "MCP server for wholesale pharmacy site automation - login, search, cart, sales ledger"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "symphonyno10"}
]
keywords = ["mcp", "wholesale", "pharmacy", "automation", "playwright"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Office/Business",
]
dependencies = [
    "mcp>=1.0.0",
    "playwright>=1.40.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
]

[project.urls]
Homepage = "https://github.com/symphonyno10/wholesale-mcp"
Repository = "https://github.com/symphonyno10/wholesale-mcp"

[project.scripts]
wholesale-mcp = "wholesale_mcp.server:main"

[tool.setuptools.packages.find]
include = ["wholesale_mcp*"]

[tool.setuptools.package-data]
"wholesale_mcp" = ["recipes/*.json"]
